--- a/ProjetosProdutos/assets/css/log.css
+++ b/ProjetosProdutos/assets/css/log.css
@@ -1,3 +1,16 @@
+:root {
+  --background: #fff;
+  --title: #000;
+  --shadow: #0000001a;
+  --border: #a9a9a9;
+  --outline: #636363;
+  --outline-focus: #1f3040;
+}
+
+h1{
+  color: var(--title);
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -6,10 +19,10 @@ form {
   width: 450px;
   padding: 25px;
   border-radius: 10px;
-  background-color: #fff;
-  border: 1px solid #a9a9a9;
+  background-color: var(--background);
+  border: 1px solid var(--border);
   margin-top: 80px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px var(--shadow);
 }
 
 .input-fields {
@@ -26,39 +39,39 @@ form {
   max-height: 180px;
   min-height: 45px;
   height: 100%;
-  outline: 1px solid #636363;
+  outline: 1px solid var(--outline);
   border: none;
   border-radius: 8px;
   padding: 12px 12px;
   font-size: 14px;
-  background-color: #fff;
+  background-color: var(--background);
   transition: all 0.3s ease;
 }
 
 .input-fields input:focus,
 .input-fields textarea:focus,
 .input-fields select:focus {
-  outline: 1px solid #1f3040;
+  outline: 1px solid var(--outline-focus);
 }
 
 .input-fields input:focus+label,
 .input-fields textarea:focus+label {
   top: -10px;
-  color: #1f3040;
+  color: var(--outline-focus);
   font-weight: 600;
 }
 
 .input-fields input:not(:placeholder-shown)+label,
 .input-fields textarea:not(:placeholder-shown)+label {
   top: -10px;
-  color: #1f3040;
+  color: var(--outline-focus);
   font-weight: 600;
 }
 
 .input-fields input:not(:placeholder-shown),
 .input-fields textarea:not(:placeholder-shown),
 .input-fields select:not(:placeholder-shown) {
-  outline: 1px solid #1f3040;
+  outline: 1px solid var(--outline-focus);
 }
 
 .input-fields label {
@@ -69,8 +82,8 @@ form {
   padding: 0 2px;
   pointer-events: none;
   transition: all .2s ease;
-  background-color: #fff;
-  color: #636363;
+  background-color: var(--background);
+  color: var(--outline);
   border-radius: 2px;
 }
 
@@ -137,7 +150,7 @@ button:hover {
   display: block;
   background-color: rgb(9, 9, 175);
   box-shadow: 0 0 0 5px #3b83f65f;
-  color: #fff;
+  color: var(--background);
   border-radius: 5px;
   font-weight: 600;
   cursor: pointer;
