--- a/ProjetosProdutos/assets/css/components.css
+++ b/ProjetosProdutos/assets/css/components.css
@@ -18,7 +18,7 @@ h1 {
 nav {
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 20;
     display: flex;
     width: 100%;
     padding: 30px 20px 30px 20px;
@@ -44,14 +44,14 @@ li .meumenu {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 14px;
     text-decoration: none;
-    color: #4c4c4c;
-    border: 0 1px 0 0 #4c4c4c;
+    color: var(--text);
+    border: 0 1px 0 0 var(--text);
     border-bottom: 2px solid transparent;
     transition: all 0.3s ease;
 }
 
 li .meumenu:hover {
-    border-bottom: 2px solid #4c4c4c;
+    border-bottom: 2px solid var(--text);
 }
 
 li .active-url {
@@ -133,22 +133,6 @@ li>a {
     font-size: 18px;
 }
 
-.drop-logout {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    border-radius: 8px;
-    background-color: #ce0000;
-    padding: 10px;
-    cursor: pointer;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-    transition: all 0.3s ease;
-}
-
 .drop-logout:hover {
     background-color: #8e1b1b;
 }
@@ -167,6 +151,15 @@ td {
     padding: 8px;
     min-width: 80px;
     max-width: 300px;
+}
+
+td > ul {
+    display: block;
+}
+
+td > ul > li{
+    text-decoration: dotted;
+    display: block;
 }
 
 tr:nth-child(even) {
@@ -198,10 +191,182 @@ th {
     color: red;
 }
 
+.fa-user-check,
+.fa-circle-check{
+    color: rgb(0, 178, 0);
+}
+
 .fa-pen-to-square:hover {
     color: #1b1b8e;
 }
 
 .fa-trash:hover {
     color: #8e1b1b;
+}
+
+.fa-user-check:hover,
+.fa-circle-check:hover{
+    color: #008000;
+}
+
+.table-clients,
+.table-products,
+.table-sales{
+    padding-block: 30px; 
+    display: flex; 
+    flex-direction: column;
+    align-items: center; 
+    gap: 30px;
+}
+
+.card-container-cart{
+    border-radius: 10px;
+    border: 1px solid var(--border);
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.card{
+    display: flex;
+    height: auto;
+    width: 600px;
+    flex-direction: row;
+    align-items: start;
+}
+
+.card > ul{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    align-items: baseline;
+    padding-left: 20px;
+    border-left: 1px solid var(--border);
+}
+
+.card > ul > li{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid var(--border);
+}
+
+.info-product-card{
+    padding: 8px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.info-name-card{
+    width: 100%;
+}
+
+.info-name-card{
+    align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.info-price-card{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.quantity-product{
+    margin-top: 5px;
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--text);
+}
+
+.code-product{
+    font-size: 12px;
+    color: var(--outline);
+}
+
+.info-quantity-card{
+    display: flex;
+    gap: 10px;
+}
+
+button.btn-plus-product,
+button.btn-minus-product,
+button.btn-exclude-product{
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    background-color: #fff;
+    border: none;
+    color: var(--title);
+}
+
+button.btn-plus-product:hover,
+button.btn-minus-product:hover{
+    color: var(--outline);
+}
+
+button.btn-submit-cart:hover{
+    background-color: #21219a;
+}
+
+.card-footer-cart{
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid var(--border);
+}
+
+
+#h2-client{
+    margin-right: 10px;
+    width: 100%;
+    max-width: 200px;
+    text-wrap: balance;
+}
+
+.card-sales-container{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 40px;
+    padding: 30px;
+    max-width: 800px;
+}
+
+.card-sales{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    border: 1px solid var(--border);
+}
+
+.info-card-sales{
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+}
+
+.info-card-sales > ul{
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 2px;
+}
+
+.sales-id{
+    font-size: 26px;
+    font-weight: 600;
 }
