--- a/ProjetosProdutos/assets/css/log.css
+++ b/ProjetosProdutos/assets/css/log.css
@@ -7,11 +7,25 @@
   --outline-focus: #1f3040;
 }
 
+/* From Uiverse.io by themrsami */ 
+.container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(circle, rgba(0, 0, 0, 0.188) 10%, transparent 10%);
+  background-size: 30px 30px;
+}
+
+
 h1{
   color: var(--title);
 }
 
 form {
+  z-index: 10;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,7 +33,7 @@ form {
   width: 450px;
   padding: 25px;
   border-radius: 10px;
-  background-color: var(--background);
+  background-color: #fff;
   border: 1px solid var(--border);
   margin-top: 80px;
   box-shadow: 0 4px 10px var(--shadow);
@@ -127,7 +141,24 @@ a {
   transition: all 0.3s ease;
 }
 */
-button {
+
+.drop-logout{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 8px;
+  background-color: #ce0000;
+  padding: 10px;
+  cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+
+button:not(.select-button, .drop-logout, .btn-plus-product, .btn-minus-product, .btn-exclude-product) {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -144,7 +175,8 @@ button {
   transition:all 0.3s ease;
 }
 
-button:hover {
+
+button:not(.select-button, .btn-plus-product, .btn-minus-product, .btn-exclude-product, .btn-submit-cart):hover{
   padding: 10px 8px;
   width: 100%;
   display: block;
@@ -155,6 +187,12 @@ button:hover {
   font-weight: 600;
   cursor: pointer;
   transition: all 0.3s ease;
+}
+
+.select-button{
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
 }
 
 .msg-container {
